back to generic file path

--- a/fig.yml
+++ b/fig.yml
@@ -18,7 +18,7 @@ hydroshare:
   volumes:
     #- "media:/home/docker/hydroshare/static/media"
     # Share the volume on hydrodev with the hydroshare container
-    - "/home/jeff/hydroshare:/home/docker/hydroshare"
+    - "/home/hydro/hydroshare:/home/docker/hydroshare"
   ports:
     - "1338:22"
     - "8000:8000"
