fix paths for fig.yml and restore-media-linux

--- a/fig.yml
+++ b/fig.yml
@@ -16,9 +16,9 @@ hydroshare:
     POSTGIS_USER: postgres
     PGPASSWORD: postgres
   volumes:
-    #- "media:/home/docker/hydroshare/static/media"
+    - "media:/home/docker/hydroshare/hydroshare/static/media"
     # Share the volume on hydrodev with the hydroshare container
-    - "/home/hydro/hydroshare:/home/docker/hydroshare"
+    #- "/home/hydro/hydroshare:/home/docker/hydroshare"
   ports:
     - "1338:22"
     - "8000:8000"
