--- a/sandbox.yml
+++ b/sandbox.yml
@@ -2,6 +2,8 @@ postgis:
   image: jamesbrink/postgresql
 redis:
   image: dockerfile/redis
+rabbitmq: 
+  image: dockerfile/rabbitmq
 hydroshare:
   build: .
   environment:
@@ -15,15 +17,36 @@ hydroshare:
     PGPASSWORD: postgres
     LOCAL_SETTINGS: hydroshare.sandbox_settings
   volumes:
-    - "media:/home/docker/hydroshare/static/media"
+    - "media:/home/docker/hydroshare/hydroshare/static/media"
   ports:
     - "1338:22"
     - "80:8000"
   links:
     - postgis:postgis
     - redis:redis
+    - rabbitmq:rabbitmq
   command: /bin/bash init
-worker:
+defaultworker:
+  build: .
+  environment:
+    POSTGIS_HOST: postgis
+    POSTGIS_PORT: 5432
+    REDIS_HOST: redis
+    REDIS_PORT: 6379
+    POSTGIS_PASSWORD: postgres
+    POSTGIS_DB: postgres
+    PGPASSWORD: postgres
+    C_FORCE_ROOT: 1
+  volumes_from:
+    - hydroshare
+  volumes:
+    - "/var/run/docker.sock:/docker.sock"
+  links:
+    - postgis:postgis
+    - redis:redis
+    - rabbitmq:rabbitmq
+  command: celery worker -A hydroshare -E -Q default
+dockerworker:
   build: .
   environment:
     POSTGIS_HOST: postgis
@@ -37,8 +60,11 @@ worker:
     LOCAL_SETTINGS: hydroshare.sandbox_settings
   volumes_from:
     - hydroshare
+  volumes:
+    - "/var/run/docker.sock:/docker.sock"
   links:
     - postgis:postgis
     - redis:redis
-  command: celery worker -A hydroshare -E
+    - rabbitmq:rabbitmq
+  command: celery worker -A hydroshare -E -Q docker_container_tasks,docker_broadcast_tasks
   
