--- a/sandbox.yml
+++ b/sandbox.yml
@@ -17,7 +17,9 @@ hydroshare:
     PGPASSWORD: postgres
     LOCAL_SETTINGS: hydroshare.sandbox_settings
   volumes:
-    - "media:/home/docker/hydroshare/hydroshare/static/media"
+    - "media:/home/docker/hydroshare/static/media"
+    # Share the volume on hydrodev with the hydroshare container
+    #- "/home/hydro/hydroshare:/home/docker/hydroshare"
   ports:
     - "1338:22"
     - "80:8000"
@@ -37,6 +39,7 @@ defaultworker:
     POSTGIS_DB: postgres
     PGPASSWORD: postgres
     C_FORCE_ROOT: 1
+    LOCAL_SETTINGS: hydroshare.sandbox_settings
   volumes_from:
     - hydroshare
   volumes:
@@ -57,7 +60,6 @@ dockerworker:
     POSTGIS_DB: postgres
     PGPASSWORD: postgres
     C_FORCE_ROOT: 1
-    LOCAL_SETTINGS: hydroshare.sandbox_settings
   volumes_from:
     - hydroshare
   volumes:
@@ -67,4 +69,3 @@ dockerworker:
     - redis:redis
     - rabbitmq:rabbitmq
   command: celery worker -A hydroshare -E -Q docker_container_tasks,docker_broadcast_tasks
-  
