fix to production Dockerfile

--- a/hs_docker_base/Dockerfile.prod
+++ b/hs_docker_base/Dockerfile.prod
@@ -6,8 +6,7 @@ RUN apt-get install -y nodejs npm python-virtualenv
 RUN apt-get install -y postgresql-9.3 postgresql-client-common postgresql-common postgresql-client-9.3 redis-tools
 RUN apt-get install -y sqlite3 sqlite3-pcre libspatialite-dev libspatialite5 spatialite-bin
 RUN apt-get install -y ssh git libfreetype6 libfreetype6-dev libxml2-dev libxslt-dev libprotobuf-dev
-RUN apt-get install -y python2.7-gdal gdal-bin libgdal-dev gdal-contrib python-pillow protobuf-compiler libtokyocabinet-
-dev tokyocabinet-bin libreadline-dev ncurses-dev
+RUN apt-get install -y python2.7-gdal gdal-bin libgdal-dev gdal-contrib python-pillow protobuf-compiler libtokyocabinet-dev tokyocabinet-bin libreadline-dev ncurses-dev
 RUN apt-get install -y docker.io
 RUN apt-get install -y curl libssl0.9.8 libfuse2
 
