--- a/sandbox.yml
+++ b/sandbox.yml
@@ -60,6 +60,7 @@ dockerworker:
     POSTGIS_DB: postgres
     PGPASSWORD: postgres
     C_FORCE_ROOT: 1
+    LOCAL_SETTINGS: hydroshare.sandbox_settings
   volumes_from:
     - hydroshare
   volumes:
