--- a/fig.yml
+++ b/fig.yml
@@ -3,7 +3,7 @@ postgis:
 redis:
   image: dockerfile/redis
 rabbitmq: 
-  image: dockerfile/rabbitmq
+  image: jamescarr/rabbitmq
 hydroshare:
   build: .
   environment:
@@ -16,12 +16,12 @@ hydroshare:
     POSTGIS_USER: postgres
     PGPASSWORD: postgres
   volumes:
-    - "media:/home/docker/hydroshare/hydroshare/static/media"
+    #- "media:/home/docker/hydroshare/hydroshare/static/media"
     # Share the volume on hydrodev with the hydroshare container
-    #- "/home/hydro/hydroshare:/home/docker/hydroshare"
+    - "/home/hydrobuild/hydroshare:/home/docker/hydroshare"
   ports:
     - "1338:22"
-    - "8000:8000"
+    - "0.0.0.0:80:8000"
   links:
     - postgis:postgis
     - redis:redis
