--- a/dev.yml
+++ b/dev.yml
@@ -3,7 +3,7 @@ postgis:
 redis:
   image: dockerfile/redis
 rabbitmq: 
-  image: jamescarr/rabbitmq
+  image: dockerfile/rabbitmq
 hydroshare:
   build: .
   environment:
@@ -16,12 +16,13 @@ hydroshare:
     POSTGIS_USER: postgres
     PGPASSWORD: postgres
   volumes:
-    #- "media:/home/docker/hydroshare/hydroshare/static/media"
-    # Share the volume on hydrodev with the hydroshare container
-    - "/home/hydrobuild/hydroshare:/home/docker/hydroshare"
+    # Use when NOT sharing the entire host hydroshare directory
+    - "media:/home/docker/hydroshare/hydroshare/static/media"
+    # Specific to hydro user on the hydrodev Xubuntu VM
+    #- "/home/hydro/hydroshare:/home/docker/hydroshare"
   ports:
     - "1338:22"
-    - "80:8000"
+    - "8000:8000"
   links:
     - postgis:postgis
     - redis:redis
