--- a/fig.yml
+++ b/fig.yml
@@ -19,7 +19,7 @@ hydroshare:
     # Use when NOT sharing the entire host hydroshare directory
     - "media:/home/docker/hydroshare/hydroshare/static/media"
     # Specific to hydro user on the hydrodev Xubuntu VM
-    #- "/home/hydro/hydroshare:/home/docker/hydroshare"
+    - "/home/hydro/hydroshare:/home/docker/hydroshare"
   ports:
     - "1338:22"
     - "8000:8000"
