--- a/fig.yml
+++ b/fig.yml
@@ -17,9 +17,9 @@ hydroshare:
     PGPASSWORD: postgres
   volumes:
     # Use when NOT sharing the entire host hydroshare directory
-    - "media:/home/docker/hydroshare/hydroshare/static/media"
+    #- "media:/home/docker/hydroshare/hydroshare/static/media"
     # Specific to hydro user on the hydrodev Xubuntu VM
-    #- "/home/hydro/hydroshare:/home/docker/hydroshare"
+    - "/home/hydro/hydroshare:/home/docker/hydroshare"
   ports:
     - "1338:22"
     - "8000:8000"
