--- a/fig.yml
+++ b/fig.yml
@@ -17,8 +17,8 @@ hydroshare:
     PGPASSWORD: postgres
   volumes:
     # Specific to hydrobuild user on xxx.hydroshare.org
-    - "/home/hongyi/hydroshare:/home/docker/hydroshare"
-    - "/home/hongyi/pycharm-debug:/home/docker/pycharm-debug"
+    - "/home/hydro/hydroshare:/home/docker/hydroshare"
+    - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
   ports:
     - "1338:22"
     - "8000:8000"
