--- a/hs_docker_base/requirements.txt
+++ b/hs_docker_base/requirements.txt
@@ -19,6 +19,7 @@ django-celery==3.1.1
 django-crispy-forms==1.4.0
 django-debug-toolbar
 django-extensions
+django-haystack==2.0.0
 django-nose
 django-picklefield
 django-tastypie
