--- a/fig.yml
+++ b/fig.yml
@@ -1,9 +1,9 @@
 postgis:
-  image: jamesbrink/postgresql
+  image: mjstealey/postgresql
 redis:
   image: dockerfile/redis
 rabbitmq: 
-  image: dockerfile/rabbitmq
+  image: rabbitmq
 hydroshare:
   build: .
   environment:
@@ -18,9 +18,13 @@ hydroshare:
   volumes:
     # Use when NOT sharing the entire host hydroshare directory
     #- "media:/home/docker/hydroshare/hydroshare/static/media"
+    # for VM
     # Specific to hydro user on the hydrodev Xubuntu VM
     - "/home/hydro/hydroshare:/home/docker/hydroshare"
-    - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+
+    # Specific to hydro user for pycharm debugging on hydrodev Xubuntu VM
+    #- "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+
   ports:
     - "1338:22"
     - "8000:8000"
@@ -28,7 +32,7 @@ hydroshare:
     - postgis:postgis
     - redis:redis
     - rabbitmq:rabbitmq
-  command: python manage.py runserver 0.0.0.0:8000
+  command: /bin/bash init
 defaultworker:
   build: .
   environment:
