--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,6 +13,7 @@ RUN easy_install pip
 RUN pip install django-autocomplete-light
 RUN pip install django-jsonfield
 RUN pip install docker-py
+RUN pip install suds-jurko
 
 RUN rm -rf /tmp/pip-build-root
 RUN mkdir -p /var/run/sshd
