--- a/fig.yml
+++ b/fig.yml
@@ -1,5 +1,5 @@
 postgis:
-  image: jamesbrink/postgresql
+  image: mjstealey/postgresql
 redis:
   image: dockerfile/redis
 rabbitmq: 
@@ -16,9 +16,12 @@ hydroshare:
     POSTGIS_USER: postgres
     PGPASSWORD: postgres
   volumes:
-    # Specific to hydrobuild user on xxx.hydroshare.org
+    # Use when NOT sharing the entire host hydroshare directory
+    #- "media:/home/docker/hydroshare/hydroshare/static/media"
+    # Specific to hydro user on the hydrodev Xubuntu VM
     - "/home/hydro/hydroshare:/home/docker/hydroshare"
-    - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    # Specific to hydro user for pycharm debugging on hydrodev Xubuntu VM
+    #- "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
   ports:
     - "1338:22"
     - "8000:8000"
