--- a/fig.yml
+++ b/fig.yml
@@ -1,6 +1,6 @@
 postgis:
-  image: mjstealey/postgresql
-  #image: jamesbrink/postgresql
+  #image: mjstealey/postgresql
+  image: jamesbrink/postgresql
 redis:
   image: dockerfile/redis
 rabbitmq: 
@@ -22,7 +22,7 @@ hydroshare:
     # Specific to hydro user on the hydrodev Xubuntu VM
     - "/home/hydro/hydroshare:/home/docker/hydroshare"
     # Specific to hydro user for pycharm debugging on hydrodev Xubuntu VM
-    #- "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
   ports:
     - "1338:22"
     - "8000:8000"
