setting mac dev env

--- a/fig.yml
+++ b/fig.yml
@@ -19,10 +19,18 @@ hydroshare:
   volumes:
     # Use when NOT sharing the entire host hydroshare directory
     #- "media:/home/docker/hydroshare/hydroshare/static/media"
+    # for VM
+    # Specific to hydro user on the hydrodev Xubuntu VM
+    #- "/home/hydro/hydroshare:/home/docker/hydroshare"
+    # Specific to hydro user for pycharm debugging on hydrodev Xubuntu VM
+    #- "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    # for mac
     # Specific to hydro user on the hydrodev Xubuntu VM
     - "/Users/jamy/Desktop/hydroshare:/home/docker/hydroshare"
     # Specific to hydro user for pycharm debugging on hydrodev Xubuntu VM
-    #- "/Users/jamy/Desktop/pycharm-debug:/home/docker/pycharm-debug"
+    - "/Users/jamy/Desktop/pycharm-debug:/home/docker/pycharm-debug"
+
+
   ports:
     - "1338:22"
     - "8000:8000"
