--- a/fig.yml
+++ b/fig.yml
@@ -1,10 +1,9 @@
 postgis:
   image: mjstealey/postgresql
-  #image: jamesbrink/postgresql
 redis:
   image: dockerfile/redis
 rabbitmq: 
-  image: dockerfile/rabbitmq
+  image: rabbitmq
 hydroshare:
   build: .
   environment:
@@ -20,7 +19,7 @@ hydroshare:
     # Use when NOT sharing the entire host hydroshare directory
     #- "media:/home/docker/hydroshare/hydroshare/static/media"
     # Specific to hydro user on the hydrodev Xubuntu VM
-    - "/home/hydro/hydroshare:/home/docker/hydroshare"   
+    - "/home/hydro/hydroshare:/home/docker/hydroshare"
     # Specific to hydro user for pycharm debugging on hydrodev Xubuntu VM
     #- "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
   ports:
