--- a/hs_docker_base/requirements.txt
+++ b/hs_docker_base/requirements.txt
@@ -1,72 +1,100 @@
+Cython==0.20.1post0
 Django==1.7.1
 Fabric==1.8.0
 Fiona==1.0.2
+GDAL==1.10.1
 Jinja2==2.7.1
+MarkupSafe==0.23
 Mezzanine==3.1.10
+Pillow==2.3.0
 Pygments==1.6
+SPARQLWrapper==1.6.4
 Shapely==1.2.18
 South==0.8.4
 amqp==1.4.0
 amqplib==1.0.2
+anyjson==0.3.3
+argparse==1.2.1
 arrow==0.4.2
+backports.ssl-match-hostname==3.4.0.2
 bagit==1.3.6
+beautifulsoup4==4.1.3
+billiard==3.3.0.19
 bleach==1.4
 celery==3.1.13
 certifi==0.0.8
 chardet==2.0.1
+colorama==0.2.5
+decorator==3.4.0
 django-appconf==0.6
+django-autocomplete-light==2.0.9
 django-celery==3.1.1
 django-crispy-forms==1.4.0
-django-debug-toolbar
-django-extensions
-django-nose
-django-picklefield
-django-tastypie
+django-debug-toolbar==1.2.2
+django-extensions==1.5.0
+django-inplaceedit==1.3.0
+django-jsonfield==0.9.13
+django-nose==1.3
+django-picklefield==0.3.1
+django-tastypie==0.12.1
 django-tastypie-swagger==0.1.2
 django-timedeltafield==0.7.0
 django-widget-tweaks==1.3
+docker-py==1.0.0
 docutils==0.11
 ecdsa==0.10
 filebrowser-safe==0.3.1
-future
-geojson
+future==0.14.3
+geojson==1.0.9
+google.foresite-toolkit==1.3
+grappelli-safe==0.3.13
+gyp==0.1
 html5lib==1.0b3
-ipython
-kombu
-lxml
-matplotlib
-mimeparse
-nose
-numexpr
+ipython==2.4.1
+isodate==0.5.1
+kombu==3.0.24
+lxml==3.4.2
+matplotlib==1.4.3
+mimeparse==0.1.3
+mock==1.0.1
+netCDF4==1.1.1
+nose==1.3.4
+numexpr==2.4
+numpy==1.8.2
 oauthlib==0.6.0
+pandas==0.15.2
 paramiko==1.12.0
 protobuf==2.5.0
-psycopg2
+psycopg2==2.4.5
 pyasn1==0.1.7
 pycrypto==2.6.1
 pyparsing==2.0.1
 pyproj==1.9.3
 pysqlite==2.6.3
 python-dateutil==2.2
+python-mimeparse==0.1.4
 python-safe==1.1.2
 pytz==2013.9
 pyzmq==14.1.1
-readline
-redis
-requests
-requests-oauthlib
+rdflib==4.0.1
+readline==6.2.4.1
+redis==2.10.3
+requests==2.2.1
+requests-oauthlib==0.4.2
 rsa==3.1.2
+scipy==0.13.3
 sh==1.09
 simplejson==3.3.1
-six
+six==1.5.2
 sqlparse==0.1.10
 ssh==1.8.0
 ssh-import-id==3.14
+suds-jurko==0.6
 tables==3.0.0
 tornado==3.1.1
+tzlocal==1.0
 uWSGI==1.9.20
 urllib3==1.5
-wsgiref
-google.foresite-toolkit
-pandas
-django-inplaceedit
+virtualenv==1.11.4
+websocket-client==0.25.0
+wsgiref==0.1.2
