--- a/fig.yml
+++ b/fig.yml
@@ -20,9 +20,9 @@ hydroshare:
     #- "media:/home/docker/hydroshare/hydroshare/static/media"
     # for VM
     # Specific to hydro user on the hydrodev Xubuntu VM
-    - "/home/hydro/hydroshare:/home/docker/hydroshare"
+    - "/home/hongyi/hydroshare:/home/docker/hydroshare"
     # Specific to hydro user for pycharm debugging on hydrodev Xubuntu VM
-    # - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    - "/home/hongyi/pycharm-debug:/home/docker/pycharm-debug"
   ports:
     - "1338:22"
     - "8000:8000"
