--- a/hs_docker_base/requirements.txt
+++ b/hs_docker_base/requirements.txt
@@ -4,6 +4,7 @@ Fabric==1.8.0
 Fiona==1.0.2
 GDAL==1.10.1
 Jinja2==2.7.1
+Markdown==2.6.2
 MarkupSafe==0.23
 Mezzanine==3.1.10
 Pillow==2.3.0
@@ -32,7 +33,9 @@ django-celery==3.1.1
 django-crispy-forms==1.4.0
 django-debug-toolbar==1.2.2
 django-extensions==1.5.0
+django-filter==0.9.2
 django-inplaceedit==1.3.0
+django-jenkins==0.17.0
 django-jsonfield==0.9.13
 django-nose==1.3
 django-picklefield==0.3.1
@@ -40,6 +43,7 @@ django-tastypie==0.12.1
 django-tastypie-swagger==0.1.2
 django-timedeltafield==0.7.0
 django-widget-tweaks==1.3
+djangorestframework==3.1.1
 docker-py==1.0.0
 docutils==0.11
 ecdsa==0.10
