--- a/Dockerfile.irods
+++ b/Dockerfile.irods
@@ -8,6 +8,7 @@ RUN curl ftp://ftp.renci.org/pub/irods/releases/4.0.3/irods-runtime-4.0.3-64bit.
 RUN curl ftp://ftp.renci.org/pub/irods/releases/4.0.3/irods-icommands-4.0.3-64bit.deb -o irods-icommands-4.0.3-64bit.deb
 RUN sudo dpkg -i irods-runtime-4.0.3-64bit.deb irods-icommands-4.0.3-64bit.deb
 RUN sudo apt-get -f install
+RUN pip install -e git+https://github.com/iPlantCollaborativeOpenSource/python-irodsclient.git@master#egg=python-irodsclient
 
 ADD . /home/docker/hydroshare
 WORKDIR /home/docker
