update for use with nginx

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,9 +1,11 @@
 [uwsgi]
-socket = 127.0.0.1:3031
-master = true
-processes = 4
-env = DJANGO_SETTINGS_MODULE=hydroshare.settings
-env = PYTHONPATH=/home/docker/hydroshare
-module = django.core.handlers.wsgi:WSGIHandler()
-chdir = /home/docker
-user = docker
+project = hydroshare
+base = /home/docker
+chdir = %(base)/%(project)
+module = %(project).wsgi:application
+env = DJANGO_SETTINGS_MODULE=%(project).settings
+master = True
+processes = 5
+;socket = %(base)/%(project)/%(project).sock
+;chmod-socket = 664
+vacuum = True
