[#491] update django-irods, init script and nginx config file

--- a/nginx/hydroshare-nginx.conf
+++ b/nginx/hydroshare-nginx.conf
@@ -15,7 +15,7 @@ server {
     charset     utf-8;
 
     # max upload size
-    client_max_body_size 75M;   # adjust to taste
+    client_max_body_size 0;   # adjust to taste
 
     # Django media files
     location /media  {
