--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,3 @@
 FROM nginx
-COPY hydroshare-nginx.conf /etc/nginx/conf.d/default.conf
+#COPY hydroshare-nginx.conf /etc/nginx/conf.d/default.conf
+COPY hydroshare-ssl-nginx.conf /etc/nginx/conf.d/default.conf
