[#491] add self signed cert hydrodev-vb.example.org and deploy script

--- a/nginx/hydroshare-ssl-nginx.conf
+++ b/nginx/hydroshare-ssl-nginx.conf
@@ -6,13 +6,13 @@ upstream app_server {
 
 server {
     listen          80;
-    server_name     $hostname;
-    rewrite ^/(.*)  https://$hostname/$1 permanent;
+    server_name     FQDN_OR_IP;
+    rewrite ^/(.*)  https://FQDN_OR_IP/$1 permanent;
 }
 
 server {
     listen          443 ssl;
-    server_name     $hostname;
+    server_name     FQDN_OR_IP;
     access_log      /var/log/nginx/hydroshare_access.log combined;
     error_log       /var/log/nginx/hydroshare_error.log error;
 
@@ -20,8 +20,8 @@ server {
 
     client_max_body_size 0;
 
-    ssl_certificate         /hs-certs/SSL.crt;
-    ssl_certificate_key     /hs-certs/server.key;
+    ssl_certificate         /hs-certs/SSL_CERT_FILE;
+    ssl_certificate_key     /hs-certs/SSL_KEY_FILE;
 
     location /static/ {
         alias /home/docker/hydroshare/hydroshare/static/;
