--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ hydroshare:
     #- "media:/home/docker/hydroshare/hydroshare/static/media"
     # for VM
     # Specific to hydro user on the hydrodev Xubuntu VM
-    - "/home/hydro/hydroshare:/home/docker/hydroshare"
+    - "/home/hydro/github/hydroshare:/home/docker/hydroshare"
     # Specific to hydro user for pycharm debugging on hydrodev Xubuntu VM
     # - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
   ports:
