--- a/docker-compose.template
+++ b/docker-compose.template
@@ -17,7 +17,7 @@ hydroshare:
     PGPASSWORD: postgres
   volumes:
     # hydroshare repository
-    - "/home/hydro/github/hydroshare:/home/docker/hydroshare"
+    - "HS_SHARED_VOLUME:/home/docker/hydroshare"
     # pycharm debugging
     # - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
   ports:
