--- a/config/hydroshare-config.yaml
+++ b/config/hydroshare-config.yaml
@@ -1,22 +1,23 @@
 ### docker-compose variables ###
-HS_SHARED_VOLUME: /home/hydro/github/hydroshare
+HS_SHARED_VOLUME: /home/hydro/hydroshare
 
 ### Local Configuration Variables ###
-HS_PATH: /home/hydro/github/hydroshare
+HS_PATH: /home/hydro/hydroshare
 HOST_SSL_DIR: /home/hydro/hs-certs
 
 ### Deployment Options ###
-USE_NGINX: true
-USE_SSL: true
+USE_CLEAN: true
+USE_NGINX: false
+USE_SSL: false
 
 ### nginx Configuration Variables ###
-HS_NGINX_DIR: /home/hydro/github/hydroshare/nginx
+HS_NGINX_DIR: /home/hydro/hydroshare/nginx
 HS_NGINX_IMG: hs-nginx
 HS_NGINX: web-nginx
 HS_CNAME: hydroshare_hydroshare_1
 
 ### SSL Configuration Variables ###
-FQDN_OR_IP: 192.168.59.103
-SSL_CERT_DIR: /home/hydro/github/hydroshare/nginx/cert-files
+FQDN_OR_IP: localhost
+SSL_CERT_DIR: /home/hydro/hydroshare/nginx/cert-files
 SSL_CERT_FILE: hydrodev-vb.example.org.cert
 SSL_KEY_FILE: hydrodev-vb.example.org.key
