--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ celeryd.pid
 hydroshare/local_settings.py
 nginx/config-files/hs-nginx.conf
 config/hydroshare-config.sh
+config/hydroshare-config.yaml
+docker-compose.yml
