--- a/docker-compose.template
+++ b/docker-compose.template
@@ -19,7 +19,7 @@ hydroshare:
     # hydroshare repository
     - "HS_SHARED_VOLUME:/home/docker/hydroshare"
     # pycharm debugging
-    # - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
   ports:
     - "1338:22"
     - "8000:8000"
