[#594] add shared hydroshare repo to solr container

--- a/docker-compose.template
+++ b/docker-compose.template
@@ -6,6 +6,9 @@ rabbitmq:
   image: rabbitmq:3.5
 solr:
   image: makuk66/docker-solr
+  volumes:
+    # hydroshare repository
+    - "HS_SHARED_VOLUME:/hydroshare"
   ports:
     - "8983:8983"
 hydroshare:
