--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,13 @@ redis:
   image: redis:2.8
 rabbitmq:
   image: rabbitmq:3.5
+solr:
+  image: makuk66/docker-solr:4.10.4
+  volumes:
+    # hydroshare repository
+    - ".:/hydroshare"
+  ports:
+    - "8983:8983"
 hydroshare:
   build: .
   environment:
