[#676] add nginx maintenance page and maint_on / maint_off commands for hsctl

--- a/nginx/config-files/hydroshare-nginx.conf
+++ b/nginx/config-files/hydroshare-nginx.conf
@@ -1,26 +1,35 @@
-# hydroshare-nginx.conf
+# hydroshare-nginx.conf                                                         
 
 upstream app_server {
-    server hydroshare:8001;
+   server hydroshare:8001;
 }
 
 server {
-    listen          80;
-    server_name     FQDN_OR_IP;
-    charset         utf-8;
+   listen          80;
+   server_name     FQDN_OR_IP;
+   charset         utf-8;
+   root            /home/docker/hydroshare/hydroshare/static/;
 
-    client_max_body_size 0;
+   client_max_body_size 0;
 
-    location /static/ {
-        alias /home/docker/hydroshare/hydroshare/static/;
-    }
+   location /static/ {
+       alias /home/docker/hydroshare/hydroshare/static/;
+   }
 
-    location /media/ {
-        alias /home/docker/hydroshare/hydroshare/static/media/;
-    }
+   location /media/ {
+       alias /home/docker/hydroshare/hydroshare/static/media/;
+   }
 
-    location / {
-        uwsgi_pass  app_server;
-        include     /home/docker/hydroshare/uwsgi_params;
-    }
+   location / {
+       if (-f $document_root/maintenance_on.html) {
+          return 503;
+       }
+       uwsgi_pass  app_server;
+       include     /home/docker/hydroshare/uwsgi_params;
+   }
+
+   error_page 503 @maintenance;
+   location @maintenance {
+            rewrite ^(.*)$ /maintenance_on.html break;
+   }
 }
