--- a/nginx/config-files/hydroshare-ssl-nginx.conf
+++ b/nginx/config-files/hydroshare-ssl-nginx.conf
@@ -15,6 +15,7 @@ server {
     server_name     FQDN_OR_IP;
     access_log      /var/log/nginx/hydroshare_access.log combined;
     error_log       /var/log/nginx/hydroshare_error.log error;
+    root            /home/docker/hydroshare/hydroshare/static/;
 
     charset         utf-8;
 
@@ -32,7 +33,16 @@ server {
     }
 
     location / {
+        if (-f $document_root/maintenance_on.html) {
+            return 503;
+        }
         uwsgi_pass  app_server;
         include     /home/docker/hydroshare/uwsgi_params;
     }
+
+    error_page 503 @maintenance;
+    location @maintenance {
+            rewrite ^(.*)$ /maintenance_on.html break;
+    }
+
 }
