--- a/docker-compose.template
+++ b/docker-compose.template
@@ -17,9 +17,11 @@ hydroshare:
     PGPASSWORD: postgres
   volumes:
     # hydroshare repository
-    - "HS_SHARED_VOLUME:/home/docker/hydroshare"
+    - "HS_PATH:/home/docker/hydroshare"
     # pycharm debugging
     # - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    # log files
+    - "HS_LOG_FILES:/var/log/hydroshare"
   ports:
     - "1338:22"
     - "8000:8000"
