--- a/nginx/config-files/hydroshare-ssl-nginx.conf
+++ b/nginx/config-files/hydroshare-ssl-nginx.conf
@@ -13,8 +13,8 @@ server {
 server {
     listen          443 ssl;
     server_name     FQDN_OR_IP;
-    access_log      /var/log/nginx/hydroshare_access.log combined;
-    error_log       /var/log/nginx/hydroshare_error.log error;
+    access_log      /var/log/nginx/access.log combined;
+    error_log       /var/log/nginx/error.log error;
 
     charset         utf-8;
 
