--- a/nginx/config-files/hydroshare-nginx.conf
+++ b/nginx/config-files/hydroshare-nginx.conf
@@ -7,6 +7,9 @@ upstream app_server {
 server {
     listen          80;
     server_name     FQDN_OR_IP;
+    access_log      /var/log/nginx/access.log combined;
+    error_log       /var/log/nginx/error.log error;
+
     charset         utf-8;
 
     client_max_body_size 0;
