[#680] remove apps log file, add /log to .gitignore, change default for log files to be /home/hydro/hydroshare/log, udpate nginx logs

--- a/nginx/config-files/hydroshare-nginx.conf
+++ b/nginx/config-files/hydroshare-nginx.conf
@@ -9,6 +9,7 @@ server {
     server_name     FQDN_OR_IP;
     access_log      /var/log/nginx/access.log combined;
     error_log       /var/log/nginx/error.log error;
+    error_log       /var/log/nginx/system.log notice;
 
     charset         utf-8;
 
