--- a/nginx/config-files/hydroshare-nginx.conf
+++ b/nginx/config-files/hydroshare-nginx.conf
@@ -10,6 +10,7 @@ server {
     access_log      /var/log/nginx/access.log combined;
     error_log       /var/log/nginx/error.log error;
     error_log       /var/log/nginx/system.log notice;
+    root            /home/docker/hydroshare/hydroshare/static/;
 
     charset         utf-8;
 
@@ -24,7 +25,15 @@ server {
     }
 
     location / {
+        if (-f $document_root/maintenance_on.html) {
+            return 503;
+        }
         uwsgi_pass  app_server;
         include     /home/docker/hydroshare/uwsgi_params;
+    }
+
+    error_page 503 @maintenance;
+    location @maintenance {
+        rewrite ^(.*)$ /maintenance_on.html break;
     }
 }
