--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,11 @@ hydroshare:
     PGPASSWORD: postgres
   volumes:
     # hydroshare repository
-    - ".:/home/docker/hydroshare"
+    - "/home/hydro/hydroshare:/home/docker/hydroshare"
     # pycharm debugging
-    #- "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    # - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    # log files
+    - "/home/hydro/hydroshare/log:/var/log/hydroshare"
   ports:
     - "1338:22"
     - "8000:8000"
