update search page developing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,14 @@ hydroshare:
     POSTGIS_DB: postgres
     POSTGIS_USER: postgres
     PGPASSWORD: postgres
-    SOLR_HOST: hydroshare_solr_1
+    SOLR_HOST: solr
   volumes:
     # hydroshare repository
     - "/home/hydro/hydroshare:/home/docker/hydroshare"
     # pycharm debugging
-    #- "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    # - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    # log files
+    - "/home/hydro/hydroshare/log:/var/log/hydroshare"
   ports:
     - "1338:22"
     - "8000:8000"
@@ -35,6 +37,7 @@ hydroshare:
     - postgis:postgis
     - redis:redis
     - rabbitmq:rabbitmq
+    - solr:solr
   command: /bin/bash init
 defaultworker:
   build: .
