[#548] retrieve the original condition of: docker-compose.template, docker-compose.yml, and hs_core/views/__init__.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,9 @@ hydroshare:
     PGPASSWORD: postgres
   volumes:
     # hydroshare repository
-    - "/home/hydro/hydroshare:/home/docker/hydroshare"
+    - ".:/home/docker/hydroshare"
     # pycharm debugging
-    - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
-    # log files
-    - "/home/hydro/hydroshare/log:/var/log/hydroshare"
+    #- "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
   ports:
     - "1338:22"
     - "8000:8000"
