--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ hydroshare:
     # hydroshare repository
     - "/home/hydro/hydroshare:/home/docker/hydroshare"
     # pycharm debugging
-    - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
+    # - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
     # log files
     - "/home/hydro/hydroshare/log:/var/log/hydroshare"
   ports:
