--- a/docker-compose.template
+++ b/docker-compose.template
@@ -32,6 +32,8 @@ hydroshare:
     - "HS_LOG_FILES:/var/log/hydroshare"
     # shared location for uwsgi.sock between containers
     - "/var/run"
+    # temp directory shared with celery workers
+    - "/home/hydro/shared_temp:/shared_temp"
   ports:
     - "1338:22"
     - "8000:8000"
