--- a/docker-compose.template
+++ b/docker-compose.template
@@ -33,7 +33,7 @@ hydroshare:
     # shared location for uwsgi.sock between containers
     - "/var/run"
     # temp directory shared with celery workers
-    - "/home/hydro/shared_temp:/shared_temp"
+    - /shared_temp
   ports:
     - "1338:22"
     - "8000:8000"
