[#922] update uwsgi and nginx settings to accomodate up to 4GB download

--- a/docker-compose.template
+++ b/docker-compose.template
@@ -30,6 +30,8 @@ hydroshare:
     # - "/home/hydro/pycharm-debug:/home/docker/pycharm-debug"
     # log files
     - "HS_LOG_FILES:/var/log/hydroshare"
+    # shared location for uwsgi.sock
+    - "/var/run/uwsgi.sock"
   ports:
     - "1338:22"
     - "8000:8000"
