--- a/nginx/config-files/hydroshare-nginx.conf
+++ b/nginx/config-files/hydroshare-nginx.conf
@@ -1,7 +1,7 @@
 # hydroshare-nginx.conf                                                         
 
 upstream app_server {
-    server unix:///tmp/uwsgi.sock;
+    server unix:///var/run/uwsgi.sock;
 }
 
 server {
