[#930] FUSE integration, uwsgi in emperor mode with logging, fix to restart in hsctl

--- a/docker-compose.template
+++ b/docker-compose.template
@@ -13,6 +13,11 @@ solr:
     - "8983"
 hydroshare:
   build: .
+  cap_add:
+    - SYS_ADMIN
+  devices:
+    - "/dev/fuse"
+  privileged: true
   environment:
     POSTGIS_HOST: postgis
     POSTGIS_PORT: 5432
