--- a/vassals/uwsgi.ini
+++ b/vassals/uwsgi.ini
@@ -4,9 +4,8 @@ base = /home/docker
 chdir = %(base)/%(project)
 module = %(project).wsgi:application
 env = DJANGO_SETTINGS_MODULE=%(project).settings
-master = True
-processes = 4
-threads = 2
+processes = 10
 socket = /var/run/uwsgi.sock
 chmod-socket = 666
-vacuum = True
+vacuum = true
+harakiri = 60
