[#1044] update Nginx and gunicorn configuration

--- a/nginx/config-files/hydroshare-ssl-nginx.conf
+++ b/nginx/config-files/hydroshare-ssl-nginx.conf
@@ -18,6 +18,7 @@ server {
     error_log       /var/log/nginx/system.log notice;
 
     charset         utf-8;
+    client_max_body_size 4096m;
 
     ssl_certificate         /hs-certs/SSL_CERT_FILE;
     ssl_certificate_key     /hs-certs/SSL_KEY_FILE;
@@ -52,6 +53,7 @@ server {
         proxy_busy_buffers_size 256k;
         proxy_temp_file_write_size 256k;
         proxy_max_temp_file_size 0;
+        proxy_connect_timeout 300s;
         proxy_read_timeout 300;
     }
 
