--- a/nginx/config-files/hydroshare-nginx.conf
+++ b/nginx/config-files/hydroshare-nginx.conf
@@ -11,8 +11,8 @@ server {
     error_log       /var/log/nginx/error.log error;
     error_log       /var/log/nginx/system.log notice;
 
-
     charset         utf-8;
+    client_max_body_size 4096m;
 
     location /static/ {
         alias /home/docker/hydroshare/hydroshare/static/;
@@ -44,6 +44,7 @@ server {
         proxy_busy_buffers_size 256k;
         proxy_temp_file_write_size 256k;
         proxy_max_temp_file_size 0;
+        proxy_connect_timeout 300s;
         proxy_read_timeout 300;
     }
 
