--- a/nginx/config-files/hydroshare-nginx.conf.template
+++ b/nginx/config-files/hydroshare-nginx.conf.template
@@ -1,12 +1,32 @@
 # hydroshare-nginx.conf                                                         
 
+geo $external {
+  default 1;
+  192.168.0.0/24 0;
+  172.17.0.0/24 0;
+  127.0.0.0/8 0;
+  10.0.0.0/8 0;
+}
+
 server {
     listen          80;
     server_name     FQDN_OR_IP;
     root            /hydroshare/hydroshare/static/;
+
+    set $need_rewrite 0;
+
     if ($http_host != "FQDN_OR_IP") {
+        set $need_rewrite 1;
+    }
+
+    if ($external) {
+        set $need_rewrite "${need_rewrite}1";
+    }
+
+    if ($need_rewrite = 11) {
         rewrite ^ http://FQDN_OR_IP$request_uri permanent;
     }
+
     access_log      /var/log/nginx/access.log combined;
     error_log       /var/log/nginx/error.log error;
     error_log       /var/log/nginx/system.log notice;
