--- a/nginx/config-files/hydroshare-ssl-nginx.conf.template
+++ b/nginx/config-files/hydroshare-ssl-nginx.conf.template
@@ -1,4 +1,8 @@
 # hydroshare-ssl-nginx.conf
+ 
+# $external is 1 if the URI is external and 0 if it cannot possibly be
+# external due to use of RFC-1918 addressing. This enables loopback
+# testing of reverse proxy in management commands.
 
 geo $external {
   default 1;
@@ -19,6 +23,10 @@ server {
     server_name     FQDN_OR_IP;
     root            /hydroshare/hydroshare/static/;
 
+    # Compute whether we need to rewrite an address. Rewrite all erronious
+    # external addresses but avoid rewriting internal references (from django
+    # management commands).
+     
     set $need_rewrite 0;
 
     if ($http_host != "FQDN_OR_IP") {
