--- a/nginx/config-files/hydroshare-nginx.conf.template
+++ b/nginx/config-files/hydroshare-nginx.conf.template
@@ -79,6 +79,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Django-Reverse-Proxy true;
 
         client_max_body_size 4096m;
         client_body_buffer_size 1m;
