--- a/nginx/config-files/hydroshare-ssl-nginx.conf.template
+++ b/nginx/config-files/hydroshare-ssl-nginx.conf.template
@@ -1,13 +1,13 @@
 # hydroshare-ssl-nginx.conf
  
 # $external is 1 if the URI is external and 0 if it cannot possibly be
-# external due to use of RFC-1918 addressing. This enables loopback
-# testing of reverse proxy in management commands.
+# external due to use of RFC-1918 addressing. This avoids redirects 
+# to canonical naming when a request comes from inside hydroshare
 
 geo $external {
   default 1;
-  192.168.0.0/24 0;
-  172.17.0.0/24 0;
+  192.168.0.0/16 0;
+  172.16.0.0/12 0;
   127.0.0.0/8 0;
   10.0.0.0/8 0;
 }
@@ -15,7 +15,11 @@ geo $external {
 server {
     listen          80;
     server_name     FQDN_OR_IP;
-    rewrite ^/(.*)  https://FQDN_OR_IP/$1 permanent;
+    # This should not rewrite hostname! 
+    # rewrite ^/(.*)  https://FQDN_OR_IP/$1 permanent;
+    # This syntax is considered more efficient in nginx documentation 
+    # and does the same thing as the above: 
+    return 301 https://$http_host/$request_uri; 
 }
 
 server {
@@ -38,7 +42,7 @@ server {
     }
 
     if ($need_rewrite = 11) {
-        rewrite ^ https://FQDN_OR_IP$request_uri permanent;
+        return 301 https://FQDN_OR_IP$request_uri;
     }
 
     access_log      /var/log/nginx/access.log combined;
@@ -89,6 +93,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Django-Reverse-Proxy true;
 
         client_max_body_size 4096m;
         client_body_buffer_size 1m;
