[#2808] changes to config related to large file download

--- a/config/hydroshare-config.yaml
+++ b/config/hydroshare-config.yaml
@@ -21,4 +21,28 @@ SSL_CERT_DIR: /home/hydro/hydroshare/nginx/cert-files
 SSL_CERT_FILE: hydrodev-vb.example.org.cert
 SSL_KEY_FILE: hydrodev-vb.example.org.key
 
+### Mount point in host operating system (outside docker)
+#### This is mounted from here into the Nginx container
+IRODS_LOCAL_MOUNT: /irods
+
+#### Mount points inside docker Nginx container
+#### These give Nginx direct access to iRODS vaults
+#### All ROOTs must be children of DOCKER_MAP ###
+IRODS_DOCKER_MAP: /irods
+IRODS_DATA_ROOT: /irods/ # Dummy Value
+IRODS_USER_ROOT: /irods/ # Dummy Value
+IRODS_CACHE_ROOT: /irods/ # Dummy Value
+
+#### Nginx worker process must be able to read iRODS files.
+SENDFILE_IRODS_USER: irods
+SENDFILE_IRODS_GROUP: irods
+SENDFILE_IRODS_USER_ID: 20002 # Will be dynamic based on environment
+SENDFILE_IRODS_GROUP_ID: 20002 # Will be dynamic based on environment
+
+#### URIs in Nginx that activate reverse proxy service
+#### These must agree with URIs in local_settings.py
+IRODS_DATA_URI: irods-data
+IRODS_USER_URI: irods-user
+IRODS_CACHE_URI: irods-cache
+
 ### REQUIRES BLANK LINE AFTER LAST VARIABLE DEFINITION ###
