Stable after using postgis directly instead of via hydroshare for docker exec commands

--- a/Dockerfile-hydroshare
+++ b/Dockerfile-hydroshare
@@ -7,16 +7,14 @@ RUN pip install git+https://github.com/theromis/django-inplaceedit.git@e6fa12355
 USER root
 WORKDIR /hydroshare
 
-#ADD hydroshare.conf /etc/supervisor/conf.d/hydroshare.conf
-# TODO PARAMETERIZE
+
+# docker exec hydroshare chown -R hydro-service:storage-hydro /hydroshare /tmp /shared_tmp
 RUN usermod -u 1000 hydro-service
-# TODO PARAMETERIZE
 RUN groupmod -g 1000 storage-hydro
 RUN mkdir /hs_tmp
 RUN mkdir /shared_tmp
-RUN chown -R hydro-service:storage-hydro /etc/ssh
+RUN chown -R hydro-service:storage-hydro /hydroshare
 RUN chown -R hydro-service:storage-hydro /hs_tmp
 RUN chown -R hydro-service:storage-hydro /shared_tmp
 
-# TODO document dependency on env vars particularly python path and some django thing in dc compose
 CMD ["runuser", "-p", "-u", "hydro-service", "-g", "storage-hydro", "python", "manage.py", "runserver", "0.0.0.0:8000"]
