--- a/Dockerfile-postgis
+++ b/Dockerfile-postgis
@@ -1,5 +1,58 @@
-FROM hydroshare/hs_postgres:9.4.7
-RUN mkdir /app
-WORKDIR /app
+FROM postgres:9.4.7
+
+#WORKDIR /app
 
 ADD pg.development.sql /app/pg.development.sql
+
+
+#TODO when mkdir use -p to be more reliable
+RUN mkdir -p /app
+RUN apt-get update && apt-get install -y \
+    sudo \
+    wget
+RUN sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt trusty-pgdg main" >> /etc/apt/sources.list'
+RUN wget --quiet -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
+RUN apt-get update && apt-get install -y \
+    postgresql-9.4-postgis-2.1 \
+    pgadmin3 \
+    postgresql-contrib-9.4
+RUN apt-get clean
+RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+
+
+#TODO this is broken
+#RUN echo "listen_addresses = '*' >> /var/lib/postgresql/data/postgresql.conf"
+
+
+
+
+
+
+#RUN psql -U postgres -f /app/pg.development.sql
+
+#RUN cp /docker-entrypoint.sh /usr/local/bin/
+
+#EXPOSE 5432
+#ENTRYPOINT ["docker-entrypoint.sh"]
+
+
+#CMD ["postgres"]
+
+
+
+
+
+
+
+
+
+#RUN echo "listen_addresses = '*'" >> /var/lib/postgresql/data/postgresql.conf
+
+
+
+
+#ENTRYPOINT ["/docker-entrypoint.sh"]
+#
+#EXPOSE 5432
+#CMD ["postgres"]
