--- a/Dockerfile-defaultworker
+++ b/Dockerfile-defaultworker
@@ -4,7 +4,7 @@ MAINTAINER Phuong Doan pdoan@cuahsi.org
 # inplaceedit in pip doesn't seem compatible with Django 1.11 yet...
 RUN pip install git+https://github.com/theromis/django-inplaceedit.git@e6fa12355defedf769a5f06edc8fc079a6e982ec
 
-#USER root
+USER root
 WORKDIR /hydroshare
 
 #ADD hydroshare.conf /etc/supervisor/conf.d/hydroshare.conf
@@ -18,11 +18,12 @@ WORKDIR /hydroshare
 #RUN chown -R hydro-service:storage-hydro /hs_tmp
 #RUN chown -R hydro-service:storage-hydro /shared_tmp
 
-RUN mkdir /hydroshare/celery
+#RUN mkdir /hydroshare/celery
 # TODO add message or log so when hydroshare is down explain that this fails likely because of that
 # TODO move celerybeat sched to logdir
-RUN celery beat -A hydroshare -s /hydroshare/celery/celerybeat-schedule &
-RUN cd /hydroshare
+
+
+RUN celery beat -A hydroshare -s /log/celerybeat-schedule &
 CMD celery worker -A hydroshare -E -Q default
 
 #CMD ["runuser", "-p", "-u", "hydro-service", "-g", "storage-hydro", "python", "manage.py", "runserver", "0.0.0.0:8000"]
